--- a/source/devel/index.sass
+++ b/source/devel/index.sass
@@ -4,6 +4,13 @@ body
 	margin: 0
 *
 	box-sizing: border-box
-
+#menu li.focus
+	color: #ff5555
+	ul
+		color: #000
+#create
+	position: fixed
+	top: 20px
+	right: 50%
 @import "./_module/_font/_font"
 @import "./_module/_grid/_grid"
