--- a/source/devel/index.pug
+++ b/source/devel/index.pug
@@ -9,11 +9,15 @@ html(lang="en")
 	body
 		#wrapper
 			#menu
+			#content
 			#create
 				button.create_folder folder+
-				button.del_folder folder-
 				button.create_file file+
+				br
+				button.del_folder folder-
 				button.del_file file-
+				br
+				button.get_content get content
 		include ./_layout/_header/_header
 		include ./_layout/_footer/_footer
 		script(src='../../bower_components/jquery/dist/jquery.js')
