--- a/source/devel/index.sass
+++ b/source/devel/index.sass
@@ -8,6 +8,8 @@ body
 
 @import "./_module/_font/_font"
 @import "./_module/_grid/_grid"
+@import "./_layout/_drawers/_drawers"
+@import "./_layout/_sidebars/_sidebars"
 
 
 
