--- a/source/devel/index.pug
+++ b/source/devel/index.pug
@@ -5,20 +5,21 @@ html(lang="en")
 		meta(name="viewport", content="width=device-width, initial-scale=1.0")
 		meta(http-equiv="X-UA-Compatible", content="ie=edge")
 		link(rel="stylesheet", href="./index.css")
-		title Archetype
+		title Notes
 	body
-		#wrapper
-			#menu
-			#content
-			#create
-				button.create_folder folder+
-				button.create_file file+
-				br
-				button.del_folder folder-
-				button.del_file file-
-				br
-				button.get_content get content
-		include ./_layout/_header/_header
-		include ./_layout/_footer/_footer
+		include ./_layout/_drawers/_drawers
+		//- #wrapper
+		//- 	#menu
+		//- 	#content
+		//- 	#create
+		//- 		button.create_folder folder+
+		//- 		button.create_file file+
+		//- 		br
+		//- 		button.del_folder folder-
+		//- 		button.del_file file-
+		//- 		br
+		//- 		button.get_content get content
+		//- include ./_layout/_header/_header
+		//- include ./_layout/_footer/_footer
 		script(src='../../bower_components/jquery/dist/jquery.js')
 		script(src='./index.js')
