--- a/source/devel/_layout/_sidebars/_sidebar_left/_sidebar_left.pug
+++ b/source/devel/_layout/_sidebars/_sidebar_left/_sidebar_left.pug
@@ -1,32 +1,8 @@
 extends ../_sidebars
 
 block sidebar__header
-	.logo logo
+	include ../../_logo/_logo
 block sidebar__body
-	ul.menu
-		li 1
-			ul
-				li 1
-				li 2
-				li 3
-				li 4
-				li 5
-		li 1
-			ul
-				li 1
-				li 2
-				li 3
-				li 4
-				li 5
-		li 1
-			ul
-				li 1
-				li 2
-				li 3
-				li 4
-				li 5
+	include ../../_menu/_menu
 block sidebar__footer
-	.icon 1
-	.icon 3
-	.icon 2
-	.icon 4
+	include ../../_directory_management/_directory_management
