--- a/source/devel/_layout/_sidebars/_sidebar_right/_sidebar_right.pug
+++ b/source/devel/_layout/_sidebars/_sidebar_right/_sidebar_right.pug
@@ -5,4 +5,4 @@ block sidebar__header
 block sidebar__body
 	.content content
 block sidebar__footer
-	footer footer
+	include ../../_directory_edit/_directory_edit
