--- a/source/devel/_layout/_sidebars/_sidebars.sass
+++ b/source/devel/_layout/_sidebars/_sidebars.sass
@@ -9,6 +9,7 @@
 			background-color: #4e4e4e
 		&body
 			flex-grow: 1
+			overflow: auto
 
 @import "./_sidebar_left/_sidebar_left"
 @import "./_sidebar_right/_sidebar_right"
