--- a/source/devel/_layout/_menu/_menu.pug
+++ b/source/devel/_layout/_menu/_menu.pug
@@ -1,46 +1,15 @@
 ul.menu#menu
-	li
-		a(href="#") Link1
-		ul
-			li
-				a(href="#") Link1
-			li
-				a(href="#") Link2
-			li
-				a(href="#") Link3
-	li
-		a(href="#") Link2
-		ul
-			li
-				a(href="#") Link1
-			li
-				a(href="#") Link2
-			li
-				a(href="#") Link3
-	li
-		a(href="#") Link3
-		ul
-			li
-				a(href="#") Link1
-			li
-				a(href="#") Link2
-			li
-				a(href="#") Link3
-	li
-		a(href="#") Link4
-		ul
-			li
-				a(href="#") Link1
-			li
-				a(href="#") Link2
-			li
-				a(href="#") Link3
-	li
-		a(href="#") Link5
-		ul
-			li
-				a(href="#") Link1
-			li
-				a(href="#") Link2
-			li
-				a(href="#") Link3
+	li.menu__.menu__folder
+		a.menu__link.menu__link_folder(data-id="0" href="#")
+			+folder('menu__icon menu__icon_folder')
+			//- span.menu__text.menu__text_folder
+			| Folder
+		ul.menu_sub
+			li.menu__.menu__folder
+				a.menu__link.menu__link_folder.menu__focused(data-id="1" href="#")
+					+folder('menu__icon menu__icon_folder')
+					| Folder
+			li.menu__.menu__file
+				a.menu__link.menu__link_file(data-id="2" href="#")
+					+file('menu__icon menu__icon_file')
+					| File
