--- a/source/devel/_layout/_sidebars/_sidebar_right/_sidebar_right.pug
+++ b/source/devel/_layout/_sidebars/_sidebar_right/_sidebar_right.pug
@@ -3,6 +3,6 @@ extends ../_sidebars
 block sidebar__header
 	header header
 block sidebar__body
-	.content content
+	textarea.content__textarea
 block sidebar__footer
 	include ../../_directory_edit/_directory_edit
