--- a/source/devel/_layout/_sidebars/_sidebars.sass
+++ b/source/devel/_layout/_sidebars/_sidebars.sass
@@ -10,6 +10,8 @@
 		&body
 			flex-grow: 1
 			overflow: auto
+			display: flex
+			padding: 1rem
 
 @import "./_sidebar_left/_sidebar_left"
 @import "./_sidebar_right/_sidebar_right"
