--- a/source/devel/index.pug
+++ b/source/devel/index.pug
@@ -23,5 +23,7 @@ html(lang="en")
 		//- 		button.get_content get content
 		//- include ./_layout/_header/_header
 		//- include ./_layout/_footer/_footer
-		script(src='../../bower_components/jquery/dist/jquery.js')
+		script(src='https://code.jquery.com/jquery-3.3.1.min.js')
 		script(src='./index.js')
+
+
