--- a/source/devel/_layout/_drawers/_drawers.pug
+++ b/source/devel/_layout/_drawers/_drawers.pug
@@ -2,7 +2,12 @@
 	.drawer__.drawer__left
 		include ../_sidebars/_sidebar_left/_sidebar_left
 		.drawer__toggle.drawer__toggle_left
+			svg(xmlns="http://www.w3.org/2000/svg" viewBox="-16 418.3 30 51")
+				path(d="M3.8,443.8l-18.7,18.7c-0.5,0.5-0.8,1.2-0.8,1.9c0,0.7,0.3,1.4,0.8,1.9l1.6,1.6c0.5,0.5,1.2,0.8,1.9,0.8s1.4-0.3,1.9-0.8 l22.3-22.3c0.5-0.5,0.8-1.2,0.8-1.9c0-0.7-0.3-1.4-0.8-1.9l-22.2-22.2c-0.5-0.5-1.2-0.8-1.9-0.8s-1.4,0.3-1.9,0.8l-1.6,1.6 c-1.1,1.1-1.1,2.8,0,3.9L3.8,443.8z")
 	.drawer__.drawer__center
 	.drawer__.drawer__right
 		include ../_sidebars/_sidebar_right/_sidebar_right
 		.drawer__toggle.drawer__toggle_right
+			svg(xmlns="http://www.w3.org/2000/svg" viewBox="180 395.4 30 51")
+				path(d="M190.2,420.9l18.7-18.7c0.5-0.5,0.8-1.2,0.8-1.9c0-0.7-0.3-1.4-0.8-1.9l-1.6-1.6c-0.5-0.5-1.2-0.8-1.9-0.8 c-0.7,0-1.4,0.3-1.9,0.8L181.1,419c-0.5,0.5-0.8,1.2-0.8,1.9c0,0.7,0.3,1.4,0.8,1.9l22.3,22.2c0.5,0.5,1.2,0.8,1.9,0.8 c0.7,0,1.4-0.3,1.9-0.8l1.6-1.6c1.1-1.1,1.1-2.8,0-3.9L190.2,420.9z")
+			
