--- a/source/devel/_layout/_drawers/_drawers.sass
+++ b/source/devel/_layout/_drawers/_drawers.sass
@@ -30,6 +30,7 @@ $drawers_right_bg_color: $drawers_left_bg_color
 	height: 100%
 	width: 100%
 	overflow-y: auto
+	padding: 1rem 2.5rem
 .drawer__right
 	position: absolute
 	top: 0
@@ -44,12 +45,29 @@ $drawers_right_bg_color: $drawers_left_bg_color
 .drawer__toggle
 	position: absolute
 	top: 50%
-	padding: 15px
+	// padding: 15px
+	height: 3rem
+	width: 1.5rem
 	color: #fff
-	background-color: rgb(0, 0, 0)
+	background-color: #3b3b3b
+	display: flex
+	align-items: center
+	svg
+		width: 0.7rem
+		fill: #fff
 .drawer__toggle_left
 	left: 100%
-	border-radius: 0 100% 100% 0
+	border-radius: 0 2rem 2rem 0
+	svg
+		margin-right: auto
+		margin-left: 1px
+		.drawer__opened_left &,
+			transform: rotateY(180deg)
 .drawer__toggle_right
 	right: 100%
-	border-radius: 100% 0 0 100%
+	border-radius: 2rem 0 0 2rem
+	svg
+		margin-right: 1px
+		margin-left: auto
+		.drawer__opened_right &
+			transform: rotateY(180deg)
