Bug fix,component new name

--- a/source/devel/_layout/_directory_management/_directory_management.sass
+++ b/source/devel/_layout/_directory_management/_directory_management.sass
@@ -20,7 +20,7 @@
 .dm__add_
 .dm__add_folder
 .dm__add_file
-.dm__remove
-.dm__remove_
-.dm__remove_folder
-.dm__remove_file
+.dm__edit
+.dm__edit_
+.dm__edit_edit
+.dm__edit_remove
