--- a/source/devel/_layout/_drawers/_drawers.pug
+++ b/source/devel/_layout/_drawers/_drawers.pug
@@ -1,4 +1,4 @@
-.drawers.drawer__opened_right.drawer__opened_left
+.drawers.drawer__opened_left
 	.drawer__.drawer__left
 		include ../_sidebars/_sidebar_left/_sidebar_left
 		.drawer__toggle.drawer__toggle_left
