--- a/source/devel/index.pug
+++ b/source/devel/index.pug
@@ -10,6 +10,7 @@ html(lang="en")
 		title Notes
 	body
 		include ./_layout/_drawers/_drawers
+		include ./_layout/_new_name/_new_name
 		//- #wrapper
 		//- 	#menu
 		//- 	#content
