--- a/source/devel/index.sass
+++ b/source/devel/index.sass
@@ -14,3 +14,4 @@ body
 @import "./_layout/_menu/_menu"
 @import "./_layout/_directory_management/_directory_management"
 @import "./_layout/_directory_edit/_directory_edit"
+@import "./_layout/_new_name/_new_name"
