--- a/source/devel/_layout/_directory_management/_directory_management.pug
+++ b/source/devel/_layout/_directory_management/_directory_management.pug
@@ -4,8 +4,8 @@
 			| Folder+
 		+file_add('dm___ dm__add_ dm__add_file')
 			| File+
-	.dm__.dm__remove
-		+folder_remove('dm___ dm__remove_ dm__remove_folder')
-			| Folder-
-		+file_remove('dm___ dm__remove_ dm__remove_file')
-			| File-
+	.dm__.dm__edit
+		+edit('dm___ dm__edit_ dm__edit_edit')
+			| Rename
+		+trash('dm___ dm__edit_ dm__edit_remove')
+			| Remove
