--- a/source/devel/index.sass
+++ b/source/devel/index.sass
@@ -15,3 +15,4 @@ body
 @import "./_layout/_directory_management/_directory_management"
 @import "./_layout/_directory_edit/_directory_edit"
 @import "./_layout/_new_name/_new_name"
+@import "./_layout/_tabs/_tabs"
