--- a/source/devel/index.sass
+++ b/source/devel/index.sass
@@ -2,9 +2,9 @@ html
 	font-size: 16px
 body
 	margin: 0
+	font-family: "Ubuntu-R"
 *
 	box-sizing: border-box
-	font-family: "Ubuntu-R"
 
 @import "./_module/_font/_font"
 @import "./_module/_grid/_grid"
@@ -16,3 +16,4 @@ body
 @import "./_layout/_directory_edit/_directory_edit"
 @import "./_layout/_new_name/_new_name"
 @import "./_layout/_tabs/_tabs"
+@import "./_github"
