Added modal redactor

--- a/source/devel/index.sass
+++ b/source/devel/index.sass
@@ -17,3 +17,4 @@ body
 @import "./_layout/_new_name/_new_name"
 @import "./_layout/_tabs/_tabs"
 @import "./_github"
+@import "./_layout/_modal/_index"
