--- a/source/devel/page.pug
+++ b/source/devel/page.pug
@@ -9,8 +9,7 @@ html(lang="en")
 		link(rel="stylesheet", href="./index.css")
 		title Notes
 	body
-		.wrapper
-			a(href="#").add add link
+		button.add add
 		include ./_layout/_modal/_index
 		script(src='https://code.jquery.com/jquery-3.3.1.min.js')
 		script(src='./page.js')
