--- a/source/devel/_layout/_modal/_index.sass
+++ b/source/devel/_layout/_modal/_index.sass
@@ -14,13 +14,14 @@ body
 	height: 100vh
 	display: none
 	position: fixed
+	top: 0
 	flex-flow: row nowrap
 	justify-content: center
 	align-items: center
 	&.modal_open
 		display: flex
 .modal_wrapper
-	background-color: #ccc
+	background-color: #737373
 	padding: 10px
 .modal__
 	margin: 1em
