--- a/source/devel/page.pug
+++ b/source/devel/page.pug
@@ -9,7 +9,11 @@ html(lang="en")
 		link(rel="stylesheet", href="./index.css")
 		title Notes
 	body
-		button.add add
+		.wrapper
+			.wrapper__body
+			.wrapper__footer
+				button.add__link link
+				button.add__h h$
 		include ./_layout/_modal/_index
 		script(src='https://code.jquery.com/jquery-3.3.1.min.js')
 		script(src='./page.js')
