--- a/source/devel/index.sass
+++ b/source/devel/index.sass
@@ -18,3 +18,18 @@ body
 @import "./_layout/_tabs/_tabs"
 @import "./_github"
 @import "./_layout/_modal/_index"
+
+
+.wrapper
+	min-width: 100vw
+	min-height: 100vh
+	display: flex
+	flex-flow: column nowrap
+	justify-content: stretch
+	align-items: stretch
+.wrapper__body
+	flex-grow: 1
+	background-color: #cac9cd
+.wrapper__footer
+	padding: 10px
+	background-color: #555555
