--- a/source/devel/_layout/_drawers/_drawers.sass
+++ b/source/devel/_layout/_drawers/_drawers.sass
@@ -5,7 +5,7 @@ $drawers_left_bg_color: rgb(59, 59, 59)
 $drawers_right_bg_color: $drawers_left_bg_color
 .drawers
 	+container
-	height: 100vh
+	height: 100%
 	position: relative
 	overflow: hidden
 	transition-duration: $drawers_transition_duration
