Added svg icon for mianMenu

--- a/source/devel/_layout/_drawers/_drawers.sass
+++ b/source/devel/_layout/_drawers/_drawers.sass
@@ -61,7 +61,7 @@ $drawers_right_bg_color: $drawers_left_bg_color
 	svg
 		margin-right: auto
 		margin-left: 1px
-		.drawer__opened_left &,
+		.drawer__opened_left &
 			transform: rotateY(180deg)
 .drawer__toggle_right
 	right: 100%
