--- a/source/devel/_layout/_mainMenu/_mainMenu.sass
+++ b/source/devel/_layout/_mainMenu/_mainMenu.sass
@@ -1,18 +1,25 @@
 .mainMenu
   background-color: #111
   height: 100%
+  width: 50px
+  padding: 10px
 .mainMenu__logo
   fill: #E95420
   color: #E95420
 .mainMenu__list
   margin: 0
-  padding: 0
+  padding: 1em 0 0 0
 .mainMenu__i
+  &+&
+    margin-top: 0.5em
 .mainMenu__link
   color: #919191
+  fill: #444
   text-decoration: none
   &:hover
+    fill: #E95420
     color: #E95420
   &_active
     color: #fff
+    fill: #fff
 
